--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
             <p class="apresentacao__conteudo__texto">Olá! Sou <strong>Rafael Lacerda</strong>, 21 anos, desenvolvedor Front-End com especialidade em React, HTML, CSS. Ajudo pequenos negócios e designers a colocarem em prática boas idéias. Vamos conversar? Me contate via <strong class="redes-destaque">Instagram</strong> ou <strong class="redes-destaque">GitHub!</strong></p>
             <div class="apresentacao__links">
                 <h2 class="apresentacao__links__subtitulo">Acesse minhas redes:</h2>
-                <a class="apresentacao__links__navegacao" href="https://www.linkedin.com/in/lacerdaneo/">
+                <a class="apresentacao__links__navegacao" href="https://www.linkedin.com/in/lacerdaneo/" target="_blank">
                     <img class="icon-orange" src="./assets/linkedin.png" alt="linkedin logo">
                     Linkedin
                 </a>
-                <a class="apresentacao__links__navegacao" href="https://github.com/neohlx">
+                <a class="apresentacao__links__navegacao" href="https://github.com/neohlx" target="_blank">
                     <img class="icon-orange" src="./assets/github.png" alt="github logo">
                     GitHub
                 </a>
-                <a  class="apresentacao__links__navegacao" href="https://x.com/neoHLX">
+                <a  class="apresentacao__links__navegacao" href="https://x.com/neoHLX" target="_blank">
                     <img class="icon-orange" src="./assets/twitter.png" alt="twitter logo">
                     Twitter 
                 </a>
